Fix header z-index

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -9,6 +9,7 @@
   padding: 30px 40px;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 .nav {
